--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.4 =<3.8.1"
+  sdk: ">=2.19.4 <=3.8.1"
 
 dependencies:
   flutter:
